--- a/Comfizen/MainWindow.xaml
+++ b/Comfizen/MainWindow.xaml
@@ -33,6 +33,53 @@
                                         WorkflowTemplate="{StaticResource WorkflowItemTemplate}"
                                         HeaderTemplate="{StaticResource WorkflowHeaderTemplate}"/>
         
+        <!-- START OF NEW STYLE FOR WORKFLOW TABS -->
+        <Style x:Key="WorkflowTabControlStyle" TargetType="TabControl">
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="TabControl">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="*"/>
+                            </Grid.RowDefinitions>
+                            <TabPanel Grid.Row="0" IsItemsHost="True" Background="Transparent"/>
+                            <Border Grid.Row="1" Background="{TemplateBinding Background}" BorderThickness="0" CornerRadius="0">
+                                <ContentPresenter ContentSource="SelectedContent"/>
+                            </Border>
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+        <Style x:Key="WorkflowTabItemStyle" TargetType="TabItem">
+            <Setter Property="Foreground" Value="{StaticResource TextSecondaryBrush}"/>
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="Padding" Value="10,6"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="TabItem">
+                        <Border x:Name="Border" BorderThickness="0,0,0,2" BorderBrush="Transparent" Margin="0,0,5,0">
+                            <ContentPresenter ContentSource="Header" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsSelected" Value="True">
+                                <Setter Property="Foreground" Value="{StaticResource TextBrush}"/>
+                                <Setter TargetName="Border" Property="BorderBrush" Value="{StaticResource PrimaryAccentBrush}"/>
+                            </Trigger>
+                             <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Foreground" Value="{StaticResource TextBrush}"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        <!-- END OF NEW STYLE -->
+        
         <ControlTemplate x:Key="CustomContextMenuTemplate" TargetType="ContextMenu">
         <Border x:Name="Border" 
                 Background="{StaticResource SecondaryBackground}"
@@ -277,10 +324,14 @@
                             <ContentControl Content="{Binding SelectedTab.WorkflowInputsController.GlobalPresets}" Visibility="{Binding SelectedTab.WorkflowInputsController.GlobalPresets.IsVisible, Converter={StaticResource BooleanToVisibilityConverter}}"/>
                             
                             <!-- START OF REPLACEMENT: Use a TabControl for workflow tabs -->
-                            <TabControl x:Name="WorkflowTabsControl" ItemsSource="{Binding SelectedTab.WorkflowInputsController.TabLayoouts}" Margin="5">
+                            <TabControl x:Name="WorkflowTabsControl" 
+                                        ItemsSource="{Binding SelectedTab.WorkflowInputsController.TabLayoouts}" 
+                                        Margin="5,0,5,5"
+                                        Style="{StaticResource WorkflowTabControlStyle}"
+                                        ItemContainerStyle="{StaticResource WorkflowTabItemStyle}">
                                 <TabControl.ItemTemplate>
                                     <DataTemplate>
-                                        <TextBlock Text="{Binding Header}"/>
+                                        <TextBlock Text="{Binding Header}" />
                                     </DataTemplate>
                                 </TabControl.ItemTemplate>
                                 <TabControl.ContentTemplate>
