--- a/Comfizen/App.xaml
+++ b/Comfizen/App.xaml
@@ -636,6 +636,63 @@
                                      MarkdownTemplate="{StaticResource MarkdownTemplate}"
                                      ScriptButtonTemplate="{StaticResource ScriptButtonTemplate}"
         />
+        
+        <!-- Style for HORIZONTAL splitters (between rows) -->
+        <Style x:Key="HorizontalGridSplitterStyle" TargetType="GridSplitter">
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="Height" Value="8"/>
+            <Setter Property="HorizontalAlignment" Value="Stretch"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="GridSplitter">
+                        <Border Background="{TemplateBinding Background}" VerticalAlignment="Center" Height="{TemplateBinding Height}">
+                            <!-- This is the visible "thumb" -->
+                            <Border x:Name="Thumb"
+                                    Background="{StaticResource TertiaryBackground}"
+                                    Height="4"
+                                    Width="40"
+                                    CornerRadius="2"
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"/>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter TargetName="Thumb" Property="Background" Value="{StaticResource PrimaryAccentBrush}"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+        <!-- Style for VERTICAL splitters (between columns) -->
+        <Style x:Key="VerticalGridSplitterStyle" TargetType="GridSplitter">
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="Width" Value="8"/>
+            <Setter Property="VerticalAlignment" Value="Stretch"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="GridSplitter">
+                        <!-- MODIFIED: Removed HorizontalAlignment="Center" to allow the border to stretch and fix drag behavior -->
+                        <Border Background="{TemplateBinding Background}" Width="{TemplateBinding Width}">
+                            <!-- This is the visible "thumb", it can remain centered -->
+                            <Border x:Name="Thumb"
+                                    Background="{StaticResource TertiaryBackground}"
+                                    Width="4"
+                                    Height="40"
+                                    CornerRadius="2"
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"/>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter TargetName="Thumb" Property="Background" Value="{StaticResource PrimaryAccentBrush}"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
 
     </Application.Resources>
 </Application>
