--- a/Comfizen/Views/UIConstructor.xaml
+++ b/Comfizen/Views/UIConstructor.xaml
@@ -128,7 +128,7 @@
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="3*" MinWidth="300"/>
-                        <ColumnDefinition Width="5"/>
+                        <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="5*" MinWidth="450"/>
                     </Grid.ColumnDefinitions>
 
@@ -139,9 +139,10 @@
                         <Border Background="{StaticResource SecondaryBackground}" CornerRadius="5">
                             <Grid>
                                 <Grid.RowDefinitions>
+                                    <RowDefinition Height="*"/>
+                                    <!-- ADDED: Row for the new GridSplitter -->
                                     <RowDefinition Height="Auto"/>
                                     <RowDefinition Height="*"/>
-                                    <!-- ADDED: Row for Available Fields -->
                                     <RowDefinition Height="Auto"/>
                                     <RowDefinition Height="*"/>
                                 </Grid.RowDefinitions>
@@ -150,30 +151,35 @@
                                 <DockPanel Grid.Row="0">
                                     <Button DockPanel.Dock="Right" Content="+" Command="{Binding AddTabCommand}" ToolTip="{local:Translate UIConstructor_AddTab}" Margin="5" Width="30" Height="30"/>
                                     <TextBlock DockPanel.Dock="Top" Text="{local:Translate UIConstructor_TabsHeader}" FontWeight="Bold" Margin="10,10,10,5"/>
-                                    <ItemsControl ItemsSource="{Binding Workflow.Tabs}" Margin="5,0,5,5"
-                                                  AllowDrop="True" Drop="TabList_Drop" DragOver="TabList_DragOver">
-                                        <ItemsControl.ItemTemplate>
-                                            <DataTemplate DataType="{x:Type local:WorkflowTabDefinition}">
-                                                <Border x:Name="TabBorder" Background="{StaticResource TertiaryBackground}" CornerRadius="3" Margin="0,2" Padding="8"
-                                                        PreviewMouseLeftButtonDown="TabDefinition_PreviewMouseLeftButtonDown"
-                                                        AllowDrop="True" Drop="TabDefinition_Drop" DragEnter="TabDefinition_DragEnter" DragLeave="TabDefinition_DragLeave">
-                                                    <Grid>
-                                                        <TextBlock Text="{Binding Name}" Visibility="{Binding IsRenaming, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=invert}" MouseLeftButtonDown="TabName_MouseLeftButtonDown"/>
-                                                        <TextBox Text="{Binding Name, UpdateSourceTrigger=Explicit}" Style="{StaticResource InlineEditTextBox}" Visibility="{Binding IsRenaming, Converter={StaticResource BooleanToVisibilityConverter}}"/>
-                                                    </Grid>
-                                                </Border>
-                                                <DataTemplate.Triggers>
-                                                    <DataTrigger Binding="{Binding IsSelected, RelativeSource={RelativeSource AncestorType=ContentPresenter}}" Value="True">
-                                                        <Setter TargetName="TabBorder" Property="Background" Value="{StaticResource PrimaryAccentBrush}"/>
-                                                    </DataTrigger>
-                                                </DataTemplate.Triggers>
-                                            </DataTemplate>
-                                        </ItemsControl.ItemTemplate>
-                                    </ItemsControl>
+                                    
+                                    <ScrollViewer VerticalScrollBarVisibility="Auto">
+                                        <ItemsControl ItemsSource="{Binding Workflow.Tabs}" Margin="5,0,5,5"
+                                                      AllowDrop="True" Drop="TabList_Drop" DragOver="TabList_DragOver">
+                                            <ItemsControl.ItemTemplate>
+                                                <DataTemplate DataType="{x:Type local:WorkflowTabDefinition}">
+                                                    <Border x:Name="TabBorder" Background="{StaticResource TertiaryBackground}" CornerRadius="3" Margin="0,2" Padding="8"
+                                                            PreviewMouseLeftButtonDown="TabDefinition_PreviewMouseLeftButtonDown"
+                                                            AllowDrop="True" Drop="TabDefinition_Drop" DragEnter="TabDefinition_DragEnter" DragLeave="TabDefinition_DragLeave">
+                                                        <Grid>
+                                                            <TextBlock Text="{Binding Name}" Visibility="{Binding IsRenaming, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=invert}" MouseLeftButtonDown="TabName_MouseLeftButtonDown"/>
+                                                            <TextBox Text="{Binding Name, UpdateSourceTrigger=Explicit}" Style="{StaticResource InlineEditTextBox}" Visibility="{Binding IsRenaming, Converter={StaticResource BooleanToVisibilityConverter}}"/>
+                                                        </Grid>
+                                                    </Border>
+                                                    <DataTemplate.Triggers>
+                                                        <DataTrigger Binding="{Binding IsSelected, RelativeSource={RelativeSource AncestorType=ContentPresenter}}" Value="True">
+                                                            <Setter TargetName="TabBorder" Property="Background" Value="{StaticResource PrimaryAccentBrush}"/>
+                                                        </DataTrigger>
+                                                    </DataTemplate.Triggers>
+                                                </DataTemplate>
+                                            </ItemsControl.ItemTemplate>
+                                        </ItemsControl>
+                                    </ScrollViewer>
                                 </DockPanel>
+                                
+                                <GridSplitter Grid.Row="1" ResizeDirection="Rows" Style="{StaticResource HorizontalGridSplitterStyle}" />
 
                                 <!-- Unassigned Groups -->
-                                <DockPanel Grid.Row="1" Margin="0,10,0,0">
+                                <DockPanel Grid.Row="2" Margin="0,10,0,0">
                                     <TextBlock DockPanel.Dock="Top" Text="{local:Translate UIConstructor_UnassignedGroupsHeader}" FontWeight="Bold" Margin="10,5,10,5"/>
                                     <!-- (ListBox для нераспределенных групп остается без изменений) -->
                                     <ListBox ItemsSource="{Binding UnassignedGroups}" Background="Transparent" BorderThickness="0" Margin="5"
@@ -190,9 +196,9 @@
                                 </DockPanel>
                                 
                                 <!-- ADDED: GridSplitter and Available Fields section -->
-                                <GridSplitter Grid.Row="2" Height="5" HorizontalAlignment="Stretch" Background="Transparent" ResizeDirection="Rows" />
+                                <GridSplitter Grid.Row="3" ResizeDirection="Rows" Style="{StaticResource HorizontalGridSplitterStyle}" />
                                 
-                                <DockPanel Grid.Row="3" Margin="0,10,0,0">
+                                <DockPanel Grid.Row="4" Margin="0,10,0,0">
                                     <Grid DockPanel.Dock="Top" Margin="10,0,10,10">
                                         <TextBox x:Name="SearchBox" Text="{Binding SearchFilter, UpdateSourceTrigger=PropertyChanged}"/>
                                         <TextBlock Text="{local:Translate UIConstructor_SearchPlaceholder}" Foreground="{StaticResource TextSecondaryBrush}" Margin="8,0" IsHitTestVisible="False" VerticalAlignment="Center">
@@ -211,7 +217,11 @@
                     </DockPanel>
                     <!-- END OF CHANGES: Left Panel -->
 
-                    <GridSplitter Grid.Column="1" Width="5" HorizontalAlignment="Stretch" Background="Transparent" />
+                    <GridSplitter Grid.Column="1" 
+                                  Style="{StaticResource VerticalGridSplitterStyle}"
+                                  ResizeBehavior="PreviousAndNext"
+                                  HorizontalAlignment="Center"
+                                  VerticalAlignment="Stretch"/>
 
                     <!-- START OF CHANGES: Right Panel for Selected Tab's Content -->
                     <Border Grid.Column="2" Background="{StaticResource SecondaryBackground}" CornerRadius="5">
